# Peridigm

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  deletePipelines.sh  symlinkFix.sh
src/additive/: CMakeLists.txt  Peridigm_AdditiveModel.hpp  Peridigm_AdditiveModelFactory.cpp  Peridigm_AdditiveModelFactory.hpp  Peridigm_SimpleAdditiveModel.cpp  Peridigm_SimpleAdditiveModel.hpp  additive_utilities.cxx  additive_utilities.h
src/additive/unit_test/: CMakeLists.txt  ut_additive_utilities.cpp
src/damage/: CMakeLists.txt  Peridigm_CriticalStretchDamageModel.cpp  Peridigm_CriticalStretchDamageModel.hpp  Peridigm_DamageModel.hpp  Peridigm_DamageModelFactory.cpp  Peridigm_DamageModelFactory.hpp  Peridigm_EnergyReleaseDamageCorrepondenceModel.cpp  Peridigm_EnergyReleaseDamageCorrepondenceModel.hpp  Peridigm_EnergyReleaseDamageModel.cpp  Peridigm_EnergyReleaseDamageModel.hpp  Peridigm_EnergyReleaseDamageModelWithPlasticity.cpp  Peridigm_EnergyReleaseDamageModelWithPlasticity.hpp  Peridigm_EnergyReleaseDamageModelWithPlasticity_org.cpp  Peridigm_InitialDamageModel.cpp  Peridigm_InitialDamageModel.hpp  Peridigm_InterfaceAwareDamageModel.cpp  Peridigm_InterfaceAwareDamageModel.hpp  Peridigm_JohnsonCookDamageModel.cpp  Peridigm_JohnsonCookDamageModel.hpp  Peridigm_PrintingDamageModel.cpp  Peridigm_PrintingDamageModel.hpp  Peridigm_UserDefinedTimeDependentCriticalStretchDamageModel.cpp  Peridigm_UserDefinedTimeDependentCriticalStretchDamageModel.hpp  Peridigm_VonMisesStressDamageModel.cpp  Peridigm_VonMisesStressDamageModel.hpp  damage_utilities.cxx  damage_utilities.h
src/damage/unit_test/: CMakeLists_tbd.txt  ut_damage_utilities.cpp
src/materials/fem/: CMakeLists.txt  FEM_ElasticMaterial.cpp  FEM_ElasticMaterial.hpp  FEM_routines.cxx  FEM_routines.h  (+4 more)
src/math/: CMakeLists.txt  approximation.cxx  approximation.h  matrices.cxx  matrices.h
(+846 files in other folders)
